Fix IG-1714 [nuclio][projects] Expand/Collapse header broken(#1905)

--- a/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
+++ b/src/nuclio/common/components/navigation-tabs/navigation-tabs.less
@@ -1,5 +1,5 @@
 .ncl-navigation-tabs {
-    background: none;
+    background: @pale-white;
     height: 55px;
     border-top: none;
     border-bottom: 1px solid @ncl-border-color;
